@@ -8,6 +8,7 @@ v0.08
 	* FIX : undo/redo handling for manipulating tags
 	* ADD : ability to draw icons on specific trackpoints
 	* ADD : draw parking symbol from mapnik
+	* ADD : tertiary highway type
 	
 v0.07 18 aug 2007
 	* ADD : nice mappaint mechanism
